--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,19 @@
   }
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
+  display: inherit;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+} */
+
+.navbar {
+  display: -webkit-box;
 }
 
 .App-link {
