--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,12 @@
   color: #61dafb;
 }
 
+.myForm {
+  margin-left: auto;
+  margin-right: auto;
+  display: table;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
